if/c#/hpdf.cs


    public uint GetHeight() {
        return HPDF_Image_GetHeight(hobj);
    }

    public uint GetBitsPerComponent() {
        return HPDF_Image_GetBitsPerComponent(hobj);
    }

    public string GetColorSpace() {
        return HPDF_Image_GetColorSpace(hobj);
    }

    public void SetColorMask(uint rmin, uint rmax, uint gmin, uint gmax,
            uint bmin, uint bmax) {
        HPDF_Image_SetColorMask(hobj, rmin, rmax, gmin, gmax,
            bmin, bmax);
    }

    public void SetMaskImage(HPdfImage mask_image) {
        HPDF_Image_SetMaskImage(hobj, mask_image.GetHandle());
    }
}

public class HPdfExtGState {
    protected IntPtr hgstate;

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_ExtGState_SetAlphaStroke(IntPtr gstate,
        float value);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_ExtGState_SetAlphaFill(IntPtr gstate,
        float value);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_ExtGState_SetBlendMode(IntPtr gstate,
        HPdfBlendMode mode);

    public HPdfExtGState(IntPtr hgstate) {
        if (hgstate == IntPtr.Zero) {
            throw new Exception("cannot create HPdfImage object.");
        }

        this.hgstate = hgstate;
    }

    public IntPtr GetHandle() {
        return hgstate;
    }

    public void SetAlphaStroke(float value) {
        HPDF_ExtGState_SetAlphaStroke(hgstate, value);
    }

    public void SetAlphaFill(float value) {
        HPDF_ExtGState_SetAlphaFill(hgstate, value);
    }

    public void SetBlendMode(HPdfBlendMode mode) {
        HPDF_ExtGState_SetBlendMode(hgstate, mode);
    }




}

}


